# jetzy.ai

./: .gitignore  Dockerfile  README.md  app.py  context_manager.py  docker-compose.yaml  docker-compose.yml  important.txt  main.py  mcp-client.py  mcp-server.py  mcp_client.py  mcp_server.py  mock_tools.py  nginx.conf  openai_mcp.py  pyproject.toml  requirements.txt  test_api_connection.py
.github/workflows/: deploy-staging.yml  main.yml
mcp/: messages.py
nginx/: nginx.conf
services/: mock_data.py  openai_service.py
src/jetzy/: __init__.py
tests/: test_mcp_client.py
