[project]
name = "jetzy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Neeraj876", email = "neerajhhhhh225@gmail.com" }
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "openai>=1.74.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jetzy"]
